Test app makes it to creating a session
Adds CloudEventBroker that manages the cloud MQTT connection and passes async messages to listeners. This lets the client get through getting a privetToken and calling createSession.